--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,9 @@ name = "ring_buffer"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.15.1", features = ["extension-module"] }
+pyo3 = "0.15.1"
 rand = "0.8.4"
+
+[features]
+extension-module = ["pyo3/extension-module"]
+default = ["extension-module"]
