--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ name = "replay_memory"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = "0.15.1"
+pyo3 = { version = "0.15.1", features = ["abi3-py36"] }
 rand = "0.8.4"
 
 [features]
